syntax = "proto3";

package v1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
	info: {
		title: "Account service";
		version: "1.0";
		contact: {
			name: "go-grpc-gateway";
			url: "https://github.com/caohoangnam/go-grpc-gateway";
			email: "caohoangnam114@gmail.com";
	};
    };
    schemes: HTTP;
    consumes: "application/json";
    produces: "application/json";
    responses: {
		key: "404";
		value: {
			description: "Returned when the resource does not exist.";
			schema: {
				json_schema: {
					type: STRING;
				}
			}
		}
	}
};

message Entries {
	int64 Id = 1;
	string AccountId = 2;
	double Amount = 3;
	
	//Date and time to reminder
	google.protobuf.Timestamp CreatedAt = 5;
	google.protobuf.Timestamp UpdatedAt = 6;
}

message CreateRequest {
	string api = 1;

	//Task entity to add
	Entries entries = 2;
}

message CreateResponse {
	string api = 1;
	int64 id = 2;
}

message ReadRequest {
	string api = 1;
	int64 id = 2;
}

message ReadResponse {
	string api = 1;
	Entries entries = 2;
}

message UpdateRequest {
	string api = 1;
	Entries entries = 2;
}

message UpdateResponse {
	string api = 1;
	int64 updatedAt = 2;
}

service EntriesService {
	rpc Create(CreateRequest) returns (CreateResponse){
		option (google.api.http) = {
			post: "/v1/entries"
			body: "*"
		};
	};

	rpc Read(ReadRequest) returns (ReadResponse){
		option (google.api.http) = {
			get: "/v1/entries/{id}"
		};
	};

	rpc Update(UpdateRequest) returns (UpdateResponse){
		option (google.api.http) = {
			put: "/v1/entries/{entries.Id}"
			body: "*"
			additional_bindings {
				patch: "/v1/entries/{entries.Id}"
				body: "*"
			}
		};
	};
}
